<resources>
    <string name="All">All</string>
    <string name="Another_click_for_leaving_app">Click back again to close the app</string>
    <string name="Bus_stops">Stops</string>
    <string name="Bus_x">Bus %s</string>
    <string name="Buses">Buses</string>
    <string name="Current_location">Current location</string>
    <string name="Current_location_x">Current location (%s)</string>
    <string name="Daily">Daily</string>
    <string name="Got_it">Got it</string>
    <string name="Journeys">Journeys</string>
    <string name="MM">MM</string>
    <string name="Mobile_tickets">Mobile tickets</string>
    <string name="More">More</string>
    <string name="New">New</string>
    <string name="OK">OK</string>
    <string name="Pending">Pending</string>
    <string name="Terms_and_conditions">Terms &amp; conditions</string>
    <string name="Terms_of_use">Terms of use</string>
    <string name="Times">Times</string>
    <string name="Tram_x">Tram %s</string>
    <string name="View">View</string>
    <string name="Warning">Warning</string>
    <string name="Weekly">Weekly</string>
    <string name="YY">YY</string>
    <string name="_mins_walk_from_">%1$s walk from %2$s</string>
    <string name="_mins_walk_from_your_current_location">%s walk from your current location</string>
    <string name="a_few_minutes_late">A few minutes late</string>
    <string name="aa">WC1TQy1UaW1lc3RhbXA=</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="able_to_use_deactivated_qr">"You'll be able to use this ticket until %s."</string>
    <string name="able_to_use_qr" formatted="false">"Then show the ticket to the scanner as you get on the bus. You'll be able to use this ticket from %s to %s."</string>
    <string name="able_to_use_this" formatted="false">"Then show it to the driver as you get on the bus. You'll be able to use this ticket from %s to %s%s."</string>
    <string name="about">About</string>
    <string name="account_closure_text">If you no longer wish to use your Stagecoach account you can request an account closure <a href="https://www.stagecoachbus.com/my-account/about-me">on our website.</a></string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="action_settings">Menu button</string>
    <string name="activ_ticket_information">Information</string>
    <string name="activate">Activate</string>
    <string name="activate_by">Use by %s</string>
    <string name="activate_now">Activate now</string>
    <string name="activate_online">Activate online</string>
    <string name="activate_this">Activate this ticket now?</string>
    <string name="activate_this_qr">Activate this QR ticket now?</string>
    <string name="activated_on">Activated on: %s</string>
    <string name="activating_offline">Activating offline</string>
    <string name="activation_fail_not_online">You cannot activate this ticket unless you are online. You can check your online status by going to your phone settings.</string>
    <string name="activation_unsuccessful">Activation unsuccessful</string>
    <string name="active">Active</string>
    <string name="active_on_another_device">Active on another device</string>
    <string name="active_on_other_devices">Active on other devices</string>
    <string name="active_since">Active since</string>
    <string name="active_ticket_activate_label">Activated</string>
    <string name="active_ticket_back_to_ticket">Back to ticket</string>
    <string name="active_ticket_time_left">Ticket expires in:</string>
    <string name="active_ticket_valid_from">Ticket is valid from:</string>
    <string name="active_tickets">Active Tickets</string>
    <string name="add">Add</string>
    <string name="add_again">Add again</string>
    <string name="add_an_address">+ Add an address</string>
    <string name="add_discount_code">Add a discount code</string>
    <string name="add_new_payment">+ Add a new payment method</string>
    <string name="add_or_change_payment_method">Add or change payment method</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="add_your_home">Add your home</string>
    <string name="add_your_work">Add your work</string>
    <string name="additional_comments">Additional comments</string>
    <string name="address_1">Address 1*</string>
    <string name="address_1_no_star">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="address_country_start">Country*</string>
    <string name="address_county">County</string>
    <string name="address_deleted">Address deleted</string>
    <string name="address_enter_address_manually">enter address manually</string>
    <string name="address_enter_postcode">Enter postcode</string>
    <string name="address_find_address">Find address</string>
    <string name="address_first_name">First name*</string>
    <string name="address_last_name">Last name*</string>
    <string name="address_nickname">Address nickname</string>
    <string name="address_postcode_star">Postcode*</string>
    <string name="address_town_star">Town*</string>
    <string name="addresses">Addresses</string>
    <string name="adult">Adult</string>
    <string name="alert_already_set">You already have an alert set</string>
    <string name="alert_disruptions_header">Disruption information</string>
    <string name="alert_for_bus_x_to_y">Take bus %1$s and alight at %2$s</string>
    <string name="alert_set_for">Alert set for</string>
    <string name="alert_to_see_bus_enable_location">To see bus times please enable Location access in Settings.</string>
    <string name="alight_in_3_stops">Get off in %d stops at</string>
    <string name="alight_now">Get off at the next stop</string>
    <string name="all_mobile_tickets_areas">All mobile ticket areas</string>
    <string name="all_passengers_must_travel_together">All passengers must travel together.</string>
    <string name="all_ticket_option">Other ticket options</string>
    <string name="all_ticket_option_from">All ticket options from £%s</string>
    <string name="all_tickets">All tickets</string>
    <string name="allow_location">Allow location access to see nearby buses and stops</string>
    <string name="allow_location_allow_access">Allow access in Settings</string>
    <string name="allow_location_info_text">With access to your location we can help you reach your destinations faster</string>
    <string name="allow_location_services">We are unable to determine your current location - please enable Location Services in Settings, or zoom into the map to see bus stops and services.</string>
    <string name="amazon_cloud_key">amazon_cloudfron_key.der</string>
    <string name="amazon_cloud_key_pair_id">APKAJIZ3JC7APGCLB64Q</string>
    <string name="amex_card_support">Currently we do not support AMEX cards. Please use a valid Visa or Mastercard to continue with this purchase.</string>
    <string name="any_tickets_or_fav_linked_to_your_account">"Any tickets or favourites linked to your
account won't be accessible"</string>
    <string name="api_key">nvwPVASmd25Rd6HVg54</string>
    <string name="app_feedback_text">"We'd love to know if you like the app and how can make it better for you. Please can you help us with your feedback?"</string>
    <string name="app_feedback_title">How do you like the app?</string>
    <string name="app_name">Stagecoach</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_discount_text">Apply</string>
    <string name="appsee_api_key">1ef7c27402b84757bc59351351d2d43d</string>
    <string name="appsflyer_gcm_number">966827729632</string>
    <string name="are_our_fares_good_value">Are our fares good value?</string>
    <string name="date_property_was_lost">Date property was lost*</string>
    <string name="dirty">Dirty</string>
    <string name="email_star">Email*</string>
    <string name="feedback_form">Feedback form</string>
    <string name="good_value">Good value</string>
    <string name="ie_brand_name_size_items_inside">i.e. brand name, size, items inside</string>
    <string name="like_app">I like the app</string>
    <string name="maybe_later">Maybe later</string>
    <string name="mobile_number">Mobile number</string>
    <string name="more_information_optional">More information (optional)</string>
    <string name="name_star">Name*</string>
    <string name="need_work">It needs more work</string>
    <string name="no">No</string>
    <string name="not_polite">Not polite</string>
    <string name="on_time">On time</string>
    <string name="or">or</string>
    <string name="phone_number_star">Phone number*</string>
    <string name="please_mention_your___">Please mention your departure time, bus route number, origin and destination.</string>
    <string name="polite">Polite</string>
    <string name="privacy_policy_note_with_link">We care about protecting your privacy. View our <a href="https://www.stagecoachbus.com/privacy-policy">Privacy Policy</a> for details of how we collect and use your information.</string>
    <string name="quite_clean">Quite clean</string>
    <string name="reasonable">Reasonable</string>
    <string name="submit">Submit</string>
    <string name="too_expensive">Too expensive</string>
    <string name="very_clean">Very clean</string>
    <string name="very_late">Very late</string>
    <string name="very_polite">Very polite</string>
    <string name="was_our_driver_polite">Was our driver polite?</string>
    <string name="was_the_bus_clean">Was the bus clean?</string>
    <string name="was_the_bus_on_time">Was the bus on time?</string>
    <string name="what_colour_is_it">What colour is it?*</string>
    <string name="what_did_you_lose">What did you lose?*</string>
    <string name="which_bus_did_you_travel_on">Which bus did you travel on?*</string>
    <string name="will_you_use_our_service_again">Will you use our services again?</string>
    <string name="yes">Yes</string>
    <string name="your_details">Your details:</string>
    <string name="your_property_and_journey">Your property and journey:</string>
</resources>