<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/scrollView" android:background="@color/white" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/text" android:background="@color/grey_menu_section_title_bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/feedback_form" style="@style/Heading5" />
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldName" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/name_star" />
            <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldEmail" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:allowedCharsWatcher="true" app:fieldTitle="@string/email_star" />
            <com.stagecoach.stagecoachbus.views.field.MoreLinesField android:id="@id/fieldWhichBus" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/which_bus_did_you_travel_on" />
            <LinearLayout android:orientation="horizontal" android:id="@id/passwordInfoContainer" android:background="@drawable/background_button_rounded_bottom_stroke_light_grey" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="-1.0dip" android:layout_marginRight="5.0dip">
                <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:layout_gravity="center_horizontal" android:id="@id/feedbackPleaseMention" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_mention_your___" style="@style/Body5" />
            </LinearLayout>
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_vertical" android:id="@id/feedbackWasCleanHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/was_the_bus_clean" style="@style/FormHeading" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnVeryClean" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/very_clean" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnQuiteClean" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/quite_clean" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnDirty" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/dirty" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/was_our_driver_polite" style="@style/FormHeading" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnVeryPolite" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/very_polite" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnPolite" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/polite" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnNotPolite" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/not_polite" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_vertical" android:id="@id/feedbackWasOnTheTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/was_the_bus_on_time" style="@style/FormHeading" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnOnTime" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/on_time" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnAFewMinutesLate" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/a_few_minutes_late" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnVeryLate" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/very_late" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/are_our_fares_good_value" style="@style/FormHeading" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnGoodValue" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/good_value" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnReasonable" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/reasonable" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnTooExpensive" android:background="@drawable/button_form_selector" android:layout_width="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/too_expensive" style="@style/primary_button_blue" />
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/will_you_use_our_service_again" style="@style/FormHeading" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
                <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnYes" android:background="@drawable/button_form_left_selector" android:layout_width="0.0dip" android:layout_marginTop="10.0dip" android:text="@string/yes" android:layout_weight="0.95" style="@style/primary_button_blue" />
                <View android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.05" />
                <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:textColor="@color/blue" android:gravity="center" android:id="@id/btnNo" android:background="@drawable/button_form_right_selector" android:layout_width="0.0dip" android:layout_marginTop="10.0dip" android:text="@string/no" android:layout_weight="0.95" style="@style/primary_button_blue" />
            </LinearLayout>
            <com.stagecoach.stagecoachbus.views.field.MoreLinesField android:id="@id/fieldAdditionalComments" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/additional_comments" />
            <com.stagecoach.stagecoachbus.views.common.component.SCTextViewWithCustomLinkStyle android:id="@id/privacyPolicyMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/privacy_policy_note_with_link" style="@style/Body1" />
            <FrameLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="16.0dip">
                <com.stagecoach.stagecoachbus.views.common.UnifiedProgressBar android:layout_gravity="center_horizontal" android:id="@id/progressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Widget.AppCompat.ProgressBar" />
                <com.stagecoach.stagecoachbus.views.common.component.SCBlueButtonWithSelector android:id="@id/btnSubmit" android:paddingLeft="60.0dip" android:paddingRight="60.0dip" android:layout_width="fill_parent" android:text="@string/submit" style="@style/primary_button_blue" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>