<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/scrollView" android:background="@color/white" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/text" android:background="@color/grey_menu_section_title_bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/your_property_and_journey" style="@style/Heading5" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldLostDate" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/date_property_was_lost" />
            <FrameLayout android:id="@id/fieldLostDateOverlay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@id/fieldLostDate" android:layout_alignTop="@id/fieldLostDate" android:layout_alignRight="@id/fieldLostDate" android:layout_alignBottom="@id/fieldLostDate" />
        </RelativeLayout>
        <com.stagecoach.stagecoachbus.views.field.MoreLinesField android:id="@id/fieldWhichBusStar" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/which_bus_did_you_travel_on" />
        <LinearLayout android:orientation="horizontal" android:id="@id/passwordInfoContainer" android:background="@drawable/background_button_rounded_bottom_stroke_light_grey" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="-1.0dip" android:layout_marginRight="15.0dip">
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:layout_gravity="center_horizontal" android:id="@id/lostPropertyPleaseMention" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_mention_your___" style="@style/Body5" />
        </LinearLayout>
        <com.stagecoach.stagecoachbus.views.field.SpinnerForm android:id="@id/lostPropertySpinner" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:fieldTitle="@string/what_did_you_lose" />
        <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldColor" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/what_colour_is_it" />
        <com.stagecoach.stagecoachbus.views.field.MoreLinesField android:id="@id/fieldMoreInformation" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/more_information_optional" app:hint="@string/ie_brand_name_size_items_inside" />
        <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/text2" android:background="@color/grey_menu_section_title_bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/your_details" style="@style/Heading5" />
        <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldNameStar" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/name_star" />
        <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldEmailStar" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:allowedCharsWatcher="true" app:fieldTitle="@string/email_star" />
        <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldPhoneNoStar" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/phone_number_star" />
        <com.stagecoach.stagecoachbus.views.field.FormEditField android:id="@id/fieldMobileNo" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" app:fieldTitle="@string/mobile_number" />
        <com.stagecoach.stagecoachbus.views.field.FormEditHalfField android:id="@id/fieldPostCode" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:fieldTitle="@string/address_enter_postcode" />
        <com.stagecoach.stagecoachbus.views.common.component.SCButton android:layout_gravity="center_horizontal" android:id="@id/btnFindAddress" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="10.0dip" android:text="@string/address_find_address" style="@style/primary_button_blue_stroke" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/enterAddressManually" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip">
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or" style="@style/FormHeading" />
            <com.stagecoach.stagecoachbus.views.common.component.SCTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/address_enter_address_manually" style="@style/TextLink" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/enterAddressManuallyPanel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.stagecoach.stagecoachbus.views.account.ManualAddressView android:id="@id/manualAddressView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <com.stagecoach.stagecoachbus.views.common.component.SCTextViewWithCustomLinkStyle android:id="@id/privacyPolicyMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:text="@string/privacy_policy_note_with_link" style="@style/Body1" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_margin="10.0dip">
            <com.stagecoach.stagecoachbus.views.common.UnifiedProgressBar android:layout_gravity="center_horizontal" android:id="@id/progressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Widget.AppCompat.ProgressBar" />
            <com.stagecoach.stagecoachbus.views.common.component.SCButton android:id="@id/btnSubmit" android:layout_width="fill_parent" android:text="@string/submit" style="@style/primary_button_blue" />
        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>